@@ -12,7 +12,11 @@
   formal version number (e.g., 2.1) is in too many places to be 
   conveniently altered for small changes:
   
-  * 2016-XX-XX (minor)
+  * 2018-06-10 (minor)
+  		# Edits made by STiki (reverts/rollbacks/warnings) will now be 
+  			tagged with the "STiki" label. A backend process is available to label
+  			all prior revert/rollback actions in this manner, if this is 
+  			determined desirable by community consensus.
   		# Resolved the "milestone for blocked editor" issue; [[WP:BEANS]] (T#057)
   		# The edit comment for an AIV posting regarding a registered user 
   			will link to that user's contributions, not their talk page
@@ -20,7 +24,7 @@
   		# Building in (redundant?) checks to ensure that rollback/edit 
   			tokens are acquired; still addressing session drop/fail issues
   		# Added minor utility script that allows one to grant explicit access
-  			to users with Unicode chars. in usernames
+  			to users with Unicode characters in usernames
   
   * 2016-08-14
   		# The "ignore" button (adjacent to the "user" line of the "metadata 
